--- a/front/index.html
+++ b/front/index.html
@@ -4,13 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache"/>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self'; script-src 'self' https://cdnjs.cloudflare.com;"/>
     <title>FIRE Calculator AUS</title>
-    <link rel="stylesheet" href="../public/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
     <div class="calculator-box">
       <div class="parameters-box">
-        <form class="calculator" action="index.html" method="post">
+        <form class="calculator" action="/post" method="POST">
           <div class="parameter">
             <label for="current-age">Current age:</label>
             <input type="number" name="current-age" value="23" placeholder="23" min="0">
@@ -30,8 +32,8 @@
           </div>
 
           <div class="parameter">
-            <label for="current-assets">Current invested assets:</label>
-            <input type="number" name="current-assets" value="0" placeholder="0" min="0">
+            <label for="current-super">Current Super value:</label>
+            <input type="number" name="current-super" value="3000" placeholder="0" min="0">
           </div>
 
           <div class="parameter">
@@ -43,12 +45,12 @@
           <!--Current value of the slider will be shown to the user-->
           <div class="parameter">
             <label for="growth-rate">Investment growth rate:</label>
-            <input type="number" name="growth-rate" value="7.0" placeholder="7.0" min="-100" max="100">
+            <input type="number" name="growth-rate" value="7.0" placeholder="7.0" min="-100" max="100" step="0.5">
           </div>
 
           <div class="parameter">
             <label for="interest-rate">Interest rate:</label>
-            <input type="number" name="interest-rate" value="3.0" placeholder="3.0" min="-100" max="100">
+            <input type="number" name="interest-rate" value="3.0" placeholder="3.0" min="-100" max="100" step="0.5">
           </div>
 
           <!--Replace Submit button with "Years to FIRE" when convert to React-->
@@ -56,12 +58,19 @@
         </form>
       </div>
       <div class="graph-box">
-        <img src="../graph.png" alt="placeholder">
+        <canvas id="myChart" width="650" height="650"></canvas>
       </div>
     </div>
-    <p class="fire-age"></p>
 
-    <script src="../public/js/main.js"></script>
+    <p class="a"></p>
+    <p class="b"></p>
+    <p class="c"></p>
+    <p class="d"></p>
+    <p class="e"></p>
+    <p class="f"></p>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.js" integrity="sha512-Lii3WMtgA0C0qmmkdCpsG0Gjr6M0ajRyQRQSbTF6BsrVh/nhZdHpVZ76iMIPvQwz1eoXC3DmAg9K51qT5/dEVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="main.js"></script>
     <noscript>Sorry this website needs Javascript to run, please turn it on and refresh the page</noscript>
   </body>
 </html>
