Added calculations for Pre-Super Retirement

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
           <div class="parameter">
             <label for="retirement-age">Retirement age:</label>
-            <input type="number" name="retirement-age" value="65" placeholder="65" min="1">
+            <input type="number" name="retirement-age" value="65" placeholder="65" min="60">
             <small></small>
           </div>
 
@@ -53,6 +53,32 @@
             <input type="number" name="interest-rate" value="3.0" placeholder="3.0" min="-100" max="100" step="0.5">
           </div>
 
+          <!-- Alter default values to none when live -->
+          <h2>Pre-Super retirement</h2>
+
+          <div class="parameter">
+            <label for="preSuperRetirementAge">Retirement age:</label>
+            <!-- Need min to be currentAge and max to be retirementAge -->
+            <input type="number" name="preSuperRetirementAge" value="35" placeholder="35">
+            <small></small>
+          </div>
+
+
+          <div class="parameter">
+            <label for="preSuperAnnualSpend">Annual spending in Pre-Super retirement:</label>
+            <input type="number" name="preSuperAnnualSpend" value="60000" placeholder="60000" min="1">
+            <small></small>
+          </div>
+
+          <!-- Should I allow the user to adjust the draw rate? -->
+          <!-- What if they're 1 year till retirement and they put a draw rate of 50%? -->
+          <!-- Put in logic to auto-adjust draw rate if doesn't make sense or -->
+          <!-- make it so any left over is added on after to the Super? -->
+          <!-- <div class="parameter">
+            <label for="draw-rate">Draw rate:</label>
+            <input type="number" name="draw-rate" value="4.0" placeholder="4.0" min="0" max="100" step="0.5">
+          </div> -->
+
           <!--Replace Submit button with "Years to FIRE" when convert to React-->
           <input class="submit" type="submit" value="Submit">
         </form>
@@ -68,6 +94,12 @@
     <p class="d"></p>
     <p class="e"></p>
     <p class="f"></p>
+
+    <!-- Pre-Super numbers -->
+    <h3>Pre-Super numbers</h3>
+    <p class="g"></p>
+    <p class="h"></p>
+    <!-- <p class="i">At a draw rate of: </p> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.js" integrity="sha512-Lii3WMtgA0C0qmmkdCpsG0Gjr6M0ajRyQRQSbTF6BsrVh/nhZdHpVZ76iMIPvQwz1eoXC3DmAg9K51qT5/dEVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="main.js"></script>
